fix overflow issue

--- a/_sass/object/component/_global-navigation.sass
+++ b/_sass/object/component/_global-navigation.sass
@@ -17,24 +17,24 @@
     left: var(--width-global-navigation)
     border-left: 1px solid #0005
     box-shadow: calc(100vw - var(--margin-global-navigation) * 2) 0 0 #0005
-  > .inner
-    padding: 12px
-    display: flex
-    flex-direction: column
+  
+  > .background
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
     height: 100%
-    min-height: fit-content
-    position: relative
     overflow: hidden
     &::before
       content: ''
       position: absolute
       display: block
-      height: calc(100vh + 12px)
-      width: calc(100% + 12px)
+      height: 500px
+      width: 500px
       top: -12px
       left: 0px
       background-repeat: no-repeat
-      background-position: 20px -112px
+      background-position: -30px -122px
       background-size: 450px
       z-index: 1
       filter: blur(10px) brightness(3.5)
@@ -43,6 +43,14 @@
       mix-blend-mode: multiply
       opacity: .8
       pointer-events: none
+
+  > .inner
+    padding: 12px
+    display: flex
+    flex-direction: column
+    height: 100%
+    min-height: fit-content
+    position: relative
     ul
       list-style: none
       margin: 0
